commit extra-challenge 01

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./challenge03/script.js"></script>
+    <script src="./extra-challenges/script01.js"></script>
 </body>
 </html>
